exports[`Activity should render the failed status component 1`] = `
<div
  className="card__item soft text-left soft-bottom rounded"
  style={
    Object {
      "backgroundColor": "#BA3841",
      "color": "#FFFFFF",
      "fill": "#FFFFFF",
      "fontFamily": "colfax-web, sans-serif",
    }
  }>
  <i
    className="soft-half-right">
    <Error
      fill="#FFFFFF"
      height="31px"
      width="30px" />
  </i>
  <styled.p
    className="flush-bottom">
    Dec 25, 2016
  </styled.p>
  <div>
    You did something awesome and I\'ve never been more proud.
  </div>
  <Link
    onlyActiveOnIndex={false}
    style={
      Object {
        "color": "#FFFFFF",
        "fontWeight": "bold",
      }
    }
    to="https://my.newspring.cc/give/now">
    Click This Link
    <span
      className="icon-arrow-next soft-half-left" />
  </Link>
</div>
`;

exports[`Activity should render the warning status component 1`] = `
<div
  className="card__item soft text-left soft-bottom rounded"
  style={
    Object {
      "backgroundColor": "#242424",
      "color": "#FFFFFF",
      "fill": "#FFFFFF",
      "fontFamily": "colfax-web, sans-serif",
    }
  }>
  <i
    className="soft-half-right">
    <Error
      fill="#FFFFFF"
      height="31px"
      width="30px" />
  </i>
  <styled.p
    className="flush-bottom">
    Dec 25, 2016
  </styled.p>
  <div>
    You did something awesome and I\'ve never been more proud.
  </div>
  <Link
    onlyActiveOnIndex={false}
    style={
      Object {
        "color": "#FFFFFF",
        "fontWeight": "bold",
      }
    }
    to="https://my.newspring.cc/give/now">
    Click This Link
    <span
      className="icon-arrow-next soft-half-left" />
  </Link>
</div>
`;

exports[`Activity should render with the default set of props 1`] = `
<div
  className="card__item soft text-left soft-bottom rounded"
  style={
    Object {
      "backgroundColor": "#59A12E",
      "color": "#FFFFFF",
      "fill": "#FFFFFF",
      "fontFamily": "colfax-web, sans-serif",
    }
  }>
  <i
    className="soft-half-right">
    <Success
      fill="#FFFFFF"
      height="31px"
      width="30px" />
  </i>
  <styled.p
    className="flush-bottom">
    Dec 25, 2016
  </styled.p>
  <div>
    You did something awesome and I\'ve never been more proud.
  </div>
  <Link
    onlyActiveOnIndex={false}
    style={
      Object {
        "color": "#FFFFFF",
        "fontWeight": "bold",
      }
    }
    to="https://my.newspring.cc/give/now">
    Click This Link
    <span
      className="icon-arrow-next soft-half-left" />
  </Link>
</div>
`;
